# cPrimerPlus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ball.txt  build.sh  clear.sh  main.c  notes.md  run.sh  strArr.md
codes/: intArray.c  strArray.c
include/: increment.h  negate.h  utils.h
inputs/: user.input
notes/: arrays.md  errors.md  notes.md  pointer.md  string.md
src/: increment.c  main.c  negate.c  utils.c
